<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZidooPlan</string>
    <string name="txt_time_select_hint">Press the OK button to select</string>
    <string name="txt_time_select">Video duration</string>
    <string name="tv_year">Year</string>
    <string name="tv_month">Month</string>
    <string name="tv_day">Day</string>
    <string name="tv_hours">Hours</string>
    <string name="tv_min">Min</string>
    <string name="tv_second">Second</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <string name="added_time_select">Select rtc time</string>
    <string name="select_time_hint">Not less than the current time...</string>

</resources>